--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <header>
   <h1>💖 Romantic Proposal Website Template</h1>
   <p>Surprise your love with a beautiful interactive proposal website</p>
-  <a class="btn" href="lovetemplate.vercel.app" target="lovetemplate">Live Preview</a>
+  <a class="btn" href="https://lovetemplate.vercel.app/" target="lovetemplate">Live Preview</a>
   <a class="btn" href="https://wa.me/9878669937?text=I%20want%20to%20buy%20the%20romantic%20proposal%20template">Buy Now</a>
 </header>
 
@@ -73,3 +73,4 @@
 
 </body>
 </html>
+
